# Infernet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRODUCT.md  README.md
.github/workflows/: release-desktop.yml
.hive/: agent-context.md  file-guard.mjs  session.json
crates/infernet-llama-bridge-stub/: Cargo.toml
crates/infernet-llama-bridge-stub/src/: main.rs
crates/infernet-model/: Cargo.toml
crates/infernet-model/src/: gguf.rs  lib.rs
crates/infernet-node/: Cargo.toml
crates/infernet-node/src/: capabilities.rs  lib.rs  llama_server_runtime.rs  model_distribution.rs  rpc_runtime.rs  rpc_tunnel.rs  stable_diffusion_runtime.rs
crates/infernet-node/tests/: rpc_tunnel.rs
crates/infernet-protocol/: Cargo.toml
crates/infernet-protocol/src/: lib.rs
crates/infernet-router/: Cargo.toml
crates/infernet-router/src/: lib.rs
crates/infernet-router/tests/: missing_shards.rs
crates/infernet-runtime/: Cargo.toml
crates/infernet-runtime/src/: lib.rs
crates/infernet-worker/: Cargo.toml
crates/infernet-worker/src/: gguf.rs  main.rs
crates/infernet-worker/tests/: dynamic_discovery.rs  model_distribution.rs
deploy/: infernet-location-acme.nginx.conf  infernet-location.nginx.conf
docs/: desktop-releases.md  gguf-split-inference-design.md  infernet-chat-v1.md  infernet-image-v1.md  infernet-technical-design.md  model-distribution-design.md
infernet-ui/: index.html  package-lock.json  package.json  vite.config.ts
infernet-ui/src/: App.tsx  api.ts  chatHistory.ts  conversationContext.ts  sampleData.ts  styles.css  types.ts  useAppUpdater.ts  usePersistentChatHistory.ts
infernet-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
infernet-ui/src-tauri/capabilities/: default.json
infernet-ui/src-tauri/icons/: icon.icns
infernet-ui/src-tauri/src/: app_settings.rs  chat_history.rs  execution_plan.rs  image_runtime.rs  lib.rs  main.rs  peer_presence.rs
llama-runtime/: CMakeLists.txt  infernet-bridge.cpp
scripts/: prepare-llama-runtime.mjs  prepare-stable-diffusion-runtime.mjs  smoke-demo.ps1  smoke-demo.sh  ui-demo.ps1  ui-demo.sh
stable-diffusion-runtime/: CMakeLists.txt  infernet-overlay.cmake  rpc-server.cpp
