[workspace]
members = [
    "crates/infernet-model",
    "crates/infernet-protocol",
    "crates/infernet-runtime",
    "crates/infernet-router",
    "crates/infernet-node",
    "crates/infernet-worker",
    "infernet-ui/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/GnosysLabs/Infernet"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
fs2 = "0.4.3"
if-addrs = "0.15.0"
infernet-model = { path = "crates/infernet-model" }
infernet-node = { path = "crates/infernet-node" }
infernet-protocol = { path = "crates/infernet-protocol" }
infernet-router = { path = "crates/infernet-router" }
infernet-runtime = { path = "crates/infernet-runtime" }
libp2p = { version = "0.56.0", features = ["dcutr", "dns", "gossipsub", "identify", "json", "macros", "mdns", "noise", "ping", "quic", "relay", "request-response", "tcp", "tokio", "yamux"] }
png = "0.18.1"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "stream", "json"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tauri = "2"
tauri-build = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# Model installation hashes multi-gigabyte artifacts. Keep the SHA-256
# implementation optimized in development builds so a debug app does not turn
# a one-time integrity check into a multi-minute CPU-bound operation.
[profile.dev.package.sha2]
opt-level = 3
