[package]
name = "infernet-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
infernet-model.workspace = true
infernet-protocol.workspace = true
infernet-runtime.workspace = true
infernet-router.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
