[package]
name = "infernet-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
infernet-model.workspace = true
infernet-protocol.workspace = true
infernet-runtime.workspace = true
infernet-router.workspace = true
libp2p.workspace = true
libp2p-stream = "0.4.0-alpha"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.18", features = ["compat"] }
uuid.workspace = true

[dev-dependencies]
libp2p-swarm-test = "0.6.0"
