[package]
name = "infernet-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
infernet-model.workspace = true
infernet-node.workspace = true
infernet-protocol.workspace = true
infernet-router.workspace = true
infernet-runtime.workspace = true
libp2p.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
